New projects added

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 June 2000</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>88485 18328</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>8848518328</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Banglore, Karnataka</span></li>
               </ul>
             </div>
@@ -206,8 +206,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="far fa-envelope" style="color: #9297a8;"></i>
-            <h3>node mailer</h3>
+            <img src="assets/img/socket.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">Socket.io</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -279,8 +279,42 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Projects</h3>
+
           <div class="resume-item">
-            <h4>eniac - ecommerce</h4>
+            <h4 style="cursor: pointer;"><a href="https://healthease.netlify.app/home">Healthease</a></h4>
+            <h5>Online medical consultation web application</h5>
+            <p><em>TECHNOLOGIES USED : MongoDB, Express.js, React, Redux,
+                Node.js, WebRTC, JWT, Socket.io, PayPal, Nodemailer,
+                Bootstrap, Sass, Bcrypt, CORS, Date-fns, SweetAlert,
+                Axios, Auth0, Recharts.</em>
+            </p>
+            <p>
+            <ul>
+              <li>Fully renponsive</li>
+              <li>The platform provides separate userinterfaces for patients,
+                doctors, and administrators. It offers essential features such as
+                video calling,real-time chat, flexible doctor scheduling, follow-up
+                appointment booking from the doctor’s side, hassle-free slot
+                reservations for user’s, and streamlined booking management.</li>
+              <li>User-side offers a dynamic landing page, personalized user
+                profiles, categorized doctorlistings, booking mgt, secure wallet
+                functionality, and seamless video calls using WebRTC,real-time
+                chat, all supported by secure payment via PayPal and wallet.</li>
+              <li>Doctor’s interface includes a comprehensive profile section,
+                efficient slot scheduling, seamless video calling, booking mgt,
+                follow-up appointment booking, insightful charts for bookings
+                and revenue analysis, and detailed reporting capabilities.</li>
+              <li>Admin dashboard offers powerful tools for doctor and user
+                management, category management, streamlined booking
+                administration, comprehensive reporting with detailed charts
+                for bookings, users, and revenue.</li>
+              <li>Nginx used for reverse proxy</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/ENIAC">Eniac - ecommerce</a></h4>
             <h5>Ecommerce platform to sell laptops , build with all important features</h5>
             <p><em>TECHNOLOGIES USED : node.js , express.js , mongo-DB ,chart.js ,jQuery.js ,Bootstrap ,Nginx ,hbs</em>
             </p>
@@ -293,13 +327,26 @@
               <li>Order management , coupon management , user management, product management and charts showing orders ,
                 returns , sales , revenue .etc in admin side</li>
               <li>Payment gateway used : Razorpay</li>
-              <li>Nginx used for load balancing</li>
+              <li>Nginx used for reverse proxy</li>
             </ul>
             </p>
           </div>
 
           <div class="resume-item">
-            <h4>Web Application using MERN</h4>
+            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/React-webapp">
+                React Social Media frontend</a></h4>
+            <p>
+            <ul>
+              <li>Build a social media frontend mini web app using react.js and firebase, which consist of register
+                page, login page and home page. User can register and login to the app. Users data is stored and
+                authenticated using firebase</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/web-app">Web Application using MERN</a>
+            </h4>
             <p><em>Technologies used: react.js, node.js , express.js , mongo-DB ,redux ,JWT</em></p>
             <p>
             <ul>
@@ -309,18 +356,9 @@
             </ul>
             </p>
           </div>
+
           <div class="resume-item">
-            <h4>OLX CLONE</h4>
-            <p>
-            <ul>
-              <li>Product reselling app using react.js and firebase, consists of user login , signup,
-                and area for registering product to sell. used firebase authentication, storage and
-                firwstore database</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Netflix CLONE</h4>
+            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/Netflix-clone">Netflix CLONE</a>
             <p>
             <ul>
               <li>Movie hosting platform like netflix using react.js build with TMDb to get the
@@ -350,10 +388,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/eniacuser.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/healthease-patient.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>eniac - userside</h4>
-              <p>Using mongo-DB ,node.js ,express.js ,chart.js, multer....</p>
+              <h4>Healthease - patientside</h4>
+              <p>Using React.js, Mongo-DB, Node.js, Express.js, Redux, WebRTC, JWT, Socket.io, PayPal, Bootstrap, Sass,
+                Bcrypt, CORS, Axios, Auth0, Cloudinary...</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -366,10 +405,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/eniacuser.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/healthease-doctor.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>eniac - userside</h4>
-              <p>Using mongo-DB ,node.js ,express.js ,chart.js, multer....</p>
+              <h4>Healthease - doctorside</h4>
+              <p>Using React.js, Mongo-DB, Node.js, Express.js, Redux, WebRTC, JWT, Socket.io, PayPal, Bootstrap, Sass,
+                Bcrypt, CORS, Axios, Rechart, Cloudinary...</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -382,10 +422,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/eniacuser.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/healthease-admin.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>eniac - userside</h4>
-              <p>Using mongo-DB ,node.js ,express.js ,chart.js, multer....</p>
+              <h4>Healthease - adminside</h4>
+              <p>Using React.js, Mongo-DB, Node.js, Express.js, Redux, WebRTC, JWT, Socket.io, PayPal, Bootstrap, Sass,
+                Bcrypt, CORS, Axios, Rechart, Cloudinary...</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -398,10 +439,58 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/eniacuser.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/healthease-doctor&user-videocall.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Healthease - videocall</h4>
+              <p>Using React.js, WebRTC, JWT, Socket.io, Bootstrap, Sass...</p>
+              <div class="portfolio-links">
+                <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/healthease-doctor&user-chat.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Healthease - chat</h4>
+              <p>Using React.js, JWT, Socket.io, Bootstrap, Sass...</p>
+              <div class="portfolio-links">
+                <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/react-socialmedia-frontend.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>React frontend - social media</h4>
+              <p>Using React.js, Firebase, Bootstrap, Sass...</p>
+              <div class="portfolio-links">
+                <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/eniac-user.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>eniac - userside</h4>
-              <p>Using mongo-DB ,node.js ,express.js ,chart.js, multer....</p>
+              <p>Using Mongo-DB, Node.js, Express.js, Chart.js , multer, Handlebars....</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -414,10 +503,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/eniacadmin.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/eniac-admin.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>eniac - adminside</h4>
-              <p>Using mongo-DB ,node.js ,express.js ,chart.js, multer....</p>
+              <h4>Eniac - adminside</h4>
+              <p>Using Mongo-DB, Node.js, Express.js, Chart.js , multer, Handlebars....</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -430,10 +519,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Screenshot 2023-06-10 195057.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/react-webappuser.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web app - userside</h4>
-              <p>Using MERN</p>
+              <p>Using Mongo-DB, Node.js, Express.js, React.js....</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
@@ -446,10 +535,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Screenshot 2023-06-10 195129.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/react-webappadmin.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web app - adminside</h4>
-              <p>Using MERN</p>
+              <p>Using Mongo-DB, Node.js, Express.js, React.js....</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
@@ -462,10 +551,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Screenshot 2023-06-10 194856.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/olx-clone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Olx - clone</h4>
-              <p>Using react.js ,firebase</p>
+              <p>Using React.js, Firebase</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
@@ -478,7 +567,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Screenshot 2023-06-10 194732.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/netflix-clone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Netflix - clone</h4>
               <p>Using React.js </p>
@@ -494,10 +583,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/id fresh clone img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/idfresh-clone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>ID freshfood - clone</h4>
-              <p>Using HTML ,CSS</p>
+              <p>Using HTML, CSS</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
@@ -510,10 +599,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Killer clone img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Killer-clone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>KILLER - clone</h4>
-              <p>Using HTML ,CSS ,Bootstrap</p>
+              <p>Using HTML, CSS, Bootstrap</p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -526,10 +615,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Swiggy clone img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Swiggy-clone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Swiggy - clone</h4>
-              <p>Using HTML ,CSS </p>
+              <p>Using HTML, CSS </p>
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
