--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/jjmicon.png" rel="icon">
+  <link href="assets/img/jjmlogo-updated.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -358,14 +358,17 @@
           </div>
 
           <div class="resume-item">
-            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/Netflix-clone">Netflix CLONE</a>
+            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/Netflix-clone">Netflix CLONE</a></h4>
             <p>
             <ul>
               <li>Movie hosting platform like netflix using react.js build with TMDb to get the
                 movie details and react youtube to integrate youtube functionality</li>
+                
             </ul>
             </p>
           </div>
+
+
         </div>
       </div>
 
