--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 June 2000</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>8848518328</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Banglore, Karnataka</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bangalore, Karnataka</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -144,14 +144,14 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="fab fa-node-js" style="color: #8CC84B;"></i>
+            <i class="fab fa-node" style="color: #8CC84B;"></i>
             <h3>Node.js</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="fab fa-node" style="color: #3d404a;"></i>
-            <h3>Express.js</h3>
+            <img src="assets/img/express-js.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">Express.js</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -162,16 +162,14 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="fas fa-database" style="color: #1abe28;"></i>
-
-            <h3>mongo.DB</h3>
+            <img src="assets/img/mongodb.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">mongo.DB</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="fas fa-database" style="color: #5578ff;"></i>
-
-            <h3>PostgresSQL</h3>
+            <img src="assets/img/postgres.png.crdownload" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">PostgresSQL</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -194,8 +192,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="fas fa-cogs" style="color: #cb2121;"></i>
-            <h3>MVC Architechure</h3>
+            <img src="assets/img/MvcArc.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">MVC Architechure</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -206,7 +204,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="assets/img/socket.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <img src="assets/img/socket-io.png" alt="Socket.IO" style="width: 42px;">
             <h3 style="padding-left: 10px;">Socket.io</h3>
           </div>
         </div>
@@ -214,6 +212,30 @@
           <div class="icon-box">
             <i class="fab fa-react" style="color: #4d0c75;"></i>
             <h3>Redux</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/WebRTC.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">webRTC</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/Scss.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">Scss</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/REST API.png" alt="Socket.IO" style="width: 30px; height: 30px;">
+            <h3 style="padding-left: 10px;">REST API</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/Axios.png" alt="Socket.IO" style="width: 55px; ;">
+            <h3 style="padding-left: 10px;">Axios</h3>
           </div>
         </div>
       </div>
@@ -363,7 +385,7 @@
             <ul>
               <li>Movie hosting platform like netflix using react.js build with TMDb to get the
                 movie details and react youtube to integrate youtube functionality</li>
-                
+
             </ul>
             </p>
           </div>
@@ -652,7 +674,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Banglore, Karnataka</p>
+            <p>Bangalore, Karnataka</p>
           </div>
         </div>
 
@@ -717,7 +739,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
   </div>
   <script>
     function handleSubmit() {
